# sketch2

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  LICENSE  Makefile  README.md  SOURCE.md  commands.txt
docs/: 0. Manifesto.md  1. Design.md  4. Python Integration.md  Build.md  Demo.md  Design.md  KeyConcepts  SQLiteIntegration.md  Test.md
sketch2/: CMakeLists.txt  README.md  commands.txt
sketch2/src/: CMakeLists.txt
sketch2/src/client/: main.cpp
sketch2/src/core/: CMakeLists.txt  README.md
sketch2/src/core/control/: utest_main.cpp
sketch2/src/core/membuf/: CMakeLists.txt  utest_main.cpp
sketch2/src/core/storage/: README.md  storage.cpp  utest_main.cpp
sketch2/src/server/: CMakeLists.txt  main.cpp
sketch2/src/tester/: README.md  main.cpp
src/: CMakeLists.txt  README.md  SOURCE.md
src/client/: CMakeLists.txt  README.md
src/core/: CMakeLists.txt  README.md  SOURCE.md  utest_tmp_dir.h
src/core/compute/: BENCHMARKS.md  CMakeLists.txt  GEMINI.md  OPERATIONS.md  README.md  SOURCE.md  bench_compute.cpp  compute.cpp  compute.h  compute_avx2_utils.h  compute_avx512_utils.h  compute_cos.h  compute_cos_avx2.h  compute_cos_avx512.h  compute_cos_neon.h  compute_l1.h  compute_l1_avx2.h  compute_l1_avx512.h  compute_l1_neon.h  compute_l2.h  compute_l2_avx2.h  compute_l2_avx512.h  compute_l2_neon.h  compute_neon_utils.h  gbench_compute.cpp  scanner.cpp  scanner.h  utest_compute_cos.cpp  utest_compute_helpers.h  utest_compute_l1.cpp  utest_compute_l2.cpp  utest_compute_runtime.cpp  utest_main.cpp  utest_scanner.cpp
src/core/control/: CMakeLists.txt  README.md  control.cpp
src/core/membuf/: CMakeLists.txt  README.md  membuf.cpp
src/core/storage/: CHANGE.md  CMakeLists.txt  DESIGN.md  GEMINI.md  PROJECT.md  README.md  SOURCE.md  accumulator.cpp  accumulator.h  accumulator_wal.cpp  accumulator_wal.h  data_file.h  data_file_layout.h  data_merger.cpp  data_merger.h  data_reader.cpp  data_reader.h  data_writer.cpp  data_writer.h  dataset.cpp  dataset.h  dataset_node.cpp  dataset_node.h  dataset_reader.cpp  dataset_reader.h  dataset_writer.cpp  dataset_writer.h  input_generator.cpp  input_generator.h  input_reader.cpp  input_reader.h  storage.cpp  storage_controller.cpp  storage_controller.h  utest_accumulator.cpp  utest_accumulator_wal.cpp  utest_data_file_layout.cpp  utest_data_merger.cpp  utest_data_reader.cpp  utest_data_writer.cpp  (+6 more)
src/core/utils/: CMakeLists.txt  README.md  SOURCE.md  arch_detection.h  compute_unit.cpp  compute_unit.h  dynamic_bitset.cpp  dynamic_bitset.h  file_lock.h  file_path_lock.cpp  file_path_lock.h  ini_reader.cpp  ini_reader.h  log.cpp  log.h  rw_lock.h  shared_consts.h  shared_types.h  singleton.cpp  singleton.h  string_utils.cpp  string_utils.h  thread_pool.h  timer.h  update_notifier.cpp  update_notifier.h  utest_dynamic_bitset.cpp  utest_file_lock.cpp  utest_ini_reader.cpp  utest_log.cpp  utest_main.cpp  utest_singleton.cpp  utest_string_utils.cpp  utest_thread_pool.cpp  utest_update_notifier.cpp  utils.cpp
src/parasol/: CMakeLists.txt  DESIGN.md  README.md  SOURCE.md  parasol.cpp  parasol.h  utest_main.cpp  utest_parasol.cpp
src/pytest/: SOURCE.md  demo.py  integ_helpers.py  parasol_wrapper.py  shell.py  sketch2_wrapper.py  test_demo.py  test_integ_accumulator_pressure.py  test_integ_bulk_incremental_compact.py  test_integ_continuous_ingestion.py  test_integ_crash_recovery.py  test_integ_delete_heavy.py  test_integ_distance_functions.py  test_integ_multi_consumer.py  test_integ_multi_range.py  test_integ_vlite_interfaces.py  test_parasol_basic.py  test_parasol_errors.py  test_sketch2_basic.py  test_sketch2_errors.py  test_update_notifier.py
src/server/: CMakeLists.txt  README.md
src/shared/: CMakeLists.txt  sketch2.cpp
src/tester/: CMakeLists.txt
src/vlite/: BITSET.md  CMakeLists.txt  README.md  SOURCE.md  SQLITE.md  utest_main.cpp  utest_vlite.cpp  vlite.cpp  vlite.h
