add_executable(client main.cpp)
target_link_libraries(client PRIVATE sketch_compile_options Threads::Threads)

# Readline (best-effort) — you should have libreadline-dev (or equivalent) installed.
find_library(READLINE_LIB readline)
find_library(NCURSES_LIB ncurses)
if (READLINE_LIB)
  target_link_libraries(client PRIVATE ${READLINE_LIB})
  if (NCURSES_LIB)
    target_link_libraries(client PRIVATE ${NCURSES_LIB})
  endif()
else()
  message(WARNING "readline library not found; 'client' may fail to link. Install libreadline-dev.")
  target_link_libraries(client PRIVATE readline)
endif()
